Gap fix

--- a/src/pages/Ticketpage/ticketpage.css
+++ b/src/pages/Ticketpage/ticketpage.css
@@ -1,6 +1,6 @@
 .ticket-card {
     height: 100%;
-    width: 70%;
+    width: 80%;
     background-color: white;
     margin: auto;
     border-radius: 0.25rem;
@@ -63,7 +63,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 4rem;
+    gap: 1.5rem;
     padding-top: 0.6rem;
     border-top: 2px dotted rgba(0, 0, 0, 0.4);
     border-bottom: 2px dotted rgba(0, 0, 0, 0.4);
